#AC_PREREQ([2.68])
AC_INIT([Mrowisko], [0.1], [torgiren@gmail.com])
AM_INIT_AUTOMAKE([foreign -Wall])
AC_PROG_CXX([mpiCC.mpich])
#PKG_CHECK_MODULES([libmpe2],[brak mpe])
#AC_SEARCH_LIBS([libmpe2], [MPE_Start_log], [], [   AC_MSG_ERROR([unable to find MPE library]) ])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
