bin_PROGRAMS = Mrowisko
Mrowisko_SOURCES = main.cpp\
				   exceptions.h\
				   mrowka.h mrowka.cpp\
				   miasto.h miasto.cpp\
				   droga.h droga.cpp\
				   kontener.h kontener.cpp\
				   reader.h reader.cpp\
				   engine.h engine.cpp\
				   mympe.h mympe.cpp
Mrowisko_CXXFLAGS= -Wall -g  -lmpe
